--- a/src/TakahataDistListPrint/Views/MainTakahataDistListPrint.xaml
+++ b/src/TakahataDistListPrint/Views/MainTakahataDistListPrint.xaml
@@ -82,8 +82,20 @@
         <DataGrid x:Name="dataGrid" ItemsSource="{Binding TakahataDistListPrints}"
                   AutoGenerateColumns="False"
                   IsReadOnly="True" VerticalScrollBarVisibility="Auto" IsSynchronizedWithCurrentItem="True"
-                  SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="None"
+                  SelectionUnit="FullRow" FrozenColumnCount="0"
                   AlternatingRowBackground="{StaticResource AlternateDisplayGridBrush}">
+
+            <DataGrid.Resources>
+                <Style x:Key="DoubleRowStartHeader" TargetType="DataGridColumnHeader" BasedOn="{StaticResource {x:Type DataGridColumnHeader}}">
+                    <Setter Property="BorderThickness" Value="1,0,0,0"/>
+                    <Setter Property="Margin" Value="0,5,0,5"/>
+                </Style>
+
+                <Style x:Key="DoubleRowHeader" TargetType="DataGridColumnHeader" BasedOn="{StaticResource {x:Type DataGridColumnHeader}}">
+                    <Setter Property="BorderThickness" Value="0,0,0,0"/>
+                    <Setter Property="Margin" Value="0,5,0,5"/>
+                </Style>
+            </DataGrid.Resources>
 
             <DataGrid.Columns>
                 <DataGridTextColumn Header="出荷バッチ" Binding="{Binding CdShukkaBatch}"/>
@@ -98,17 +110,22 @@
 
                 <DataGridTextColumn Header="予定数&#xa;箱" Binding="{Binding BoxOps}" HeaderStyle="{StaticResource DoubleRowHeader}"
                     ElementStyle="{StaticResource RightTextElement}"/>
-                <DataGridTextColumn Header="&#xa;バラ" Binding="{Binding BaraOps}" ElementStyle="{StaticResource RightTextElement}"/>
-                <DataGridTextColumn Header="&#xa;総個数" Binding="{Binding NuOps}" ElementStyle="{StaticResource RightTextElement}"/>
+                <DataGridTextColumn Header="&#xa;バラ" Binding="{Binding BaraOps}" HeaderStyle="{StaticResource DoubleRowHeader}"
+                                    ElementStyle="{StaticResource RightTextElement}"/>
+                <DataGridTextColumn Header="&#xa;総個数" Binding="{Binding NuOps}" HeaderStyle="{StaticResource DoubleRowHeader}"
+                                    ElementStyle="{StaticResource RightTextElement}"/>
 
-                <DataGridTextColumn Header="仕分残数&#xa;箱" Binding="{Binding BoxRemainingPs}" HeaderStyle="{StaticResource DoubleRowHeader}"
+                <DataGridTextColumn Header="仕分残数&#xa;箱" Binding="{Binding BoxRemainingPs}" HeaderStyle="{StaticResource DoubleRowStartHeader}"
                     ElementStyle="{StaticResource RightTextElement}"/>
-                <DataGridTextColumn Header="&#xa;バラ" Binding="{Binding BaraRemainingPs}" ElementStyle="{StaticResource RightTextElement}"/>
-                <DataGridTextColumn Header="&#xa;総個数" Binding="{Binding TotalRemainingPs}" ElementStyle="{StaticResource RightTextElement}"/>
+                <DataGridTextColumn Header="&#xa;バラ" Binding="{Binding BaraRemainingPs}" HeaderStyle="{StaticResource DoubleRowHeader}"
+                                    ElementStyle="{StaticResource RightTextElement}"/>
+                <DataGridTextColumn Header="&#xa;総個数" Binding="{Binding TotalRemainingPs}" HeaderStyle="{StaticResource DoubleRowHeader}"
+                                    ElementStyle="{StaticResource RightTextElement}"/>
 
-                <DataGridTextColumn Header="仕分済&#xa;箱" Binding="{Binding BoxRps}" HeaderStyle="{StaticResource DoubleRowHeader}"
+                <DataGridTextColumn Header="仕分済&#xa;箱" Binding="{Binding BoxRps}" HeaderStyle="{StaticResource DoubleRowStartHeader}"
                     ElementStyle="{StaticResource RightTextElement}"/>
-                <DataGridTextColumn Header="&#xa;バラ" Binding="{Binding BaraRps}" ElementStyle="{StaticResource RightTextElement}"/>
+                <DataGridTextColumn Header="&#xa;バラ" Binding="{Binding BaraRps}" HeaderStyle="{StaticResource DoubleRowHeader}"
+                                    ElementStyle="{StaticResource RightTextElement}"/>
                 <DataGridTextColumn Header="&#xa;総個数" Binding="{Binding NuDrps}" ElementStyle="{StaticResource RightTextElement}"/>
             </DataGrid.Columns>
         </DataGrid>
