集約得意先登録:ID=7163 子得意先名取得失敗時、フォーカスを戻す
・選択行変更時に、コード入力済み且つ名称空欄行を選択する

--- a/src/Customer/Views/InputCustomer.xaml
+++ b/src/Customer/Views/InputCustomer.xaml
@@ -227,7 +227,9 @@
                         <DataGrid x:Name="dataGrid" ItemsSource="{Binding ChildCustomers}" AutoGenerateColumns="False"
                                   VerticalScrollBarVisibility="Auto" IsSynchronizedWithCurrentItem="True"
                                   SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="All" CanUserAddRows="True"
-                                  Style="{StaticResource MaterialDesignDataGrid}" Margin="3" FontSize="18">
+                                  Style="{StaticResource MaterialDesignDataGrid}" Margin="3" FontSize="18"
+                                  SelectionChanged="dataGrid_SelectionChanged">
+                            
                             <DataGrid.ColumnHeaderStyle>
                                 <Style TargetType="DataGridColumnHeader">
                                     <Setter Property="Background" Value="LightGray"/>
