集約得意先登録:ID=7163 子得意先名取得失敗時、フォーカスを戻す　既存の修正を適用
・DataGridFocusBehaviorを使用
・xaml.csの記載を削除

--- a/src/Customer/Views/InputCustomer.xaml
+++ b/src/Customer/Views/InputCustomer.xaml
@@ -228,8 +228,7 @@
                         <DataGrid x:Name="dataGrid" ItemsSource="{Binding ChildCustomers}" AutoGenerateColumns="False"
                                   VerticalScrollBarVisibility="Auto" IsSynchronizedWithCurrentItem="True"
                                   SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="All" CanUserAddRows="True"
-                                  Style="{StaticResource MaterialDesignDataGrid}" Margin="3" FontSize="18"
-                                  SelectionChanged="dataGrid_SelectionChanged">
+                                  Style="{StaticResource MaterialDesignDataGrid}" Margin="3" FontSize="18">
                             
                             <DataGrid.ColumnHeaderStyle>
                                 <Style TargetType="DataGridColumnHeader">
