0007217: 大仕分処理　商品をスキャンし『ブロック別大仕分開始(F5)』『商品別大仕分開始(F8)』どちらも画面を表示した後の「ラベル発行」のチェックが毎回「あり」になりますが、前回の状態を覚える様にして下さい。

--- a/src/LargeDist/Views/ItemLargeDist.xaml
+++ b/src/LargeDist/Views/ItemLargeDist.xaml
@@ -78,7 +78,7 @@
         <StackPanel Orientation="Horizontal" DockPanel.Dock="Top" Margin="10">
             <TextBlock>ラベル発行：</TextBlock>
             <RadioButton IsChecked="{Binding IsPrintLabel}" >有り</RadioButton>
-            <RadioButton Margin="100,0,0,0">無し</RadioButton>
+            <RadioButton IsChecked="{Binding IsNoPrintLabel}" Margin="100,0,0,0">無し</RadioButton>
         </StackPanel>
 
         <Grid DockPanel.Dock="Top" Margin="10">
