0007221: 大仕分処理　『取消しモード』ボタンを押下すると、赤抜きで＜取り消しモード＞と表示しますが、ボタンと合わせる為に＜取消しモード＞と（”り”を削除）表示して下さい。

--- a/src/LargeDist/Views/ItemScan.xaml
+++ b/src/LargeDist/Views/ItemScan.xaml
@@ -115,7 +115,7 @@
                     <Style TargetType="TextBlock">
                         <Style.Triggers>
                             <DataTrigger Binding="{Binding IsCancelMode}" Value="True">
-                                <Setter Property="Text" Value="＜取り消しモード＞" />
+                                <Setter Property="Text" Value="＜取消しモード＞" />
                                 <Setter Property="Foreground" Value="Wheat"/>
                                 <Setter Property="Background" Value="Red"/>
                             </DataTrigger>
