0007210 画面に1行ごとに色を付ける 0007211　印刷時にプレビュー表示 0007222 進捗表示を可能するため、マッピング時にレコード追加

--- a/src/Mapping/Views/LocInfo.xaml
+++ b/src/Mapping/Views/LocInfo.xaml
@@ -70,7 +70,8 @@
         <DataGrid Margin="3" DockPanel.Dock="Left" 
                       Name="gridlocinfo" ItemsSource="{Binding LocInfos, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"                          
                   IsReadOnly="True" VerticalScrollBarVisibility="Auto" IsSynchronizedWithCurrentItem="True"
-                  SelectionUnit="FullRow" FrozenColumnCount="0">
+                  SelectionUnit="FullRow" FrozenColumnCount="0"
+                  AlternatingRowBackground="{StaticResource AlternateDisplayGridBrush}">
 
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ブロック" Width="Auto" Binding="{Binding CdBlock}" />
