--- a/src/Picking/Views/SelectItemDlg.xaml
+++ b/src/Picking/Views/SelectItemDlg.xaml
@@ -37,7 +37,8 @@
                   CanUserAddRows="False" SelectionMode="Single"
                   HorizontalScrollBarVisibility="Visible"
                   VerticalScrollBarVisibility="Visible"                          
-                  AutoGenerateColumns="False" IsReadOnly="True">
+                  AutoGenerateColumns="False" IsReadOnly="True"
+                  AlternatingRowBackground="{StaticResource AlternateDisplayGridBrush}">
 
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="状態" Width="Auto" Binding="{Binding DStatus_name}" IsReadOnly="True"/>
