--- a/src/DistGroup/Views/InputDistGroupDlg.xaml
+++ b/src/DistGroup/Views/InputDistGroupDlg.xaml
@@ -146,7 +146,7 @@
 
                         <Label Grid.Column="0" Content="仕分グループコード"/>
                         <TextBox Grid.Column="1" Text="{Binding CdDistGroup, UpdateSourceTrigger=PropertyChanged}" MaxLength="5" IsEnabled="{Binding IsAdd}" InputMethod.IsInputMethodEnabled="False"/>
-                        <TextBox Grid.Column="2" Text="{Binding NmDistGroup, UpdateSourceTrigger=PropertyChanged}" MaxLength="40" IsEnabled="{Binding IsAdd}"/>
+                        <TextBox Grid.Column="2" Text="{Binding NmDistGroup, UpdateSourceTrigger=PropertyChanged}" MaxLength="40"/>
                     </Grid>
 
                     <Grid Grid.Row="3">
