仕分グループ情報登録:ID=7248,7250,7251 クリア、編集可能対象修正。エラーメッセージ修正
・仕分グループ名をクリア対象に
・配送便集計を編集時入力可能に
・配送便集計「しない」＆二行以上登録時のエラーメッセージ変更

--- a/src/DistGroup/Views/InputDistGroupDlg.xaml
+++ b/src/DistGroup/Views/InputDistGroupDlg.xaml
@@ -157,9 +157,9 @@
                         </Grid.ColumnDefinitions>
 
                         <Label Grid.Column="0" Content="配送便集計"/>
-                        <RadioButton Grid.Column="1" Content="しない" Margin="3" FontSize="18" IsEnabled="{Binding IsAdd}"
+                        <RadioButton Grid.Column="1" Content="しない" Margin="3" FontSize="18"
                                      IsChecked="{Binding BinSumType, Mode=TwoWay, Converter={StaticResource Enum}, ConverterParameter=No}"/>
-                        <RadioButton Grid.Column="2" Content="する" Margin="3" FontSize="18" IsEnabled="{Binding IsAdd}"
+                        <RadioButton Grid.Column="2" Content="する" Margin="3" FontSize="18"
                                      IsChecked="{Binding BinSumType, Mode=TwoWay, Converter={StaticResource Enum}, ConverterParameter=Yes}"/>
                     </Grid>
 
