大仕分グループ登録:ID=7230 参照日入力後のEnterで参照が実行される件を無効
・参照ボタンのフォーカス移動無効

--- a/src/DistLargeGroup/Views/InputDistLargeGroupDlg.xaml
+++ b/src/DistLargeGroup/Views/InputDistLargeGroupDlg.xaml
@@ -106,7 +106,7 @@
                     <Label Grid.Column="0" Content="参照日"/>
                     <StackPanel Orientation="Horizontal" Grid.Column="1">
                         <DatePicker SelectedDate="{Binding ReferenceDate}" Language="ja" Width="200" x:Name="ReferenceDate" IsEnabled="{Binding IsEdit}"/>
-                        <Button Grid.Column="2" Content="参照" Command="{Binding ReferCommand}" Margin="3" IsEnabled="{Binding IsEdit}"
+                        <Button Grid.Column="2" Content="参照" Command="{Binding ReferCommand}" Margin="3" IsEnabled="{Binding IsEdit}" Focusable="False"
                                 Height="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=Height}" Width="80"/>
                     </StackPanel>
                 </Grid>
