スクロールバーを太くする

--- a/src/Picking/Views/DistDetailWindow.xaml
+++ b/src/Picking/Views/DistDetailWindow.xaml
@@ -12,6 +12,12 @@
     </prism:Dialog.WindowStyle>
     
     <DockPanel DockPanel.Dock="Top">
+        <DockPanel.Resources>
+            <Style TargetType="ScrollBar">
+                <Setter Property="MinWidth" Value="90"/>
+                <Setter Property="MinHeight" Value="50" />
+            </Style>
+        </DockPanel.Resources>        
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="1">
             <ToolBarTray DockPanel.Dock="Top" >
                 <ToolBar ClipToBounds="False">
