--- a/src/Picking/Views/DistItemScanWindow.xaml
+++ b/src/Picking/Views/DistItemScanWindow.xaml
@@ -31,6 +31,10 @@
                 <Setter Property="Width" Value="300"/>
                 <Setter Property="FontSize" Value="30"/>
             </Style>
+            <Style TargetType="ScrollBar">
+                <Setter Property="MinWidth" Value="90"/>
+                <Setter Property="MinHeight" Value="50" />
+            </Style>
         </DockPanel.Resources>
 
 
