照会・帳票プログラム全般:「/」無し入力対応のDatePickerを実装。 ・大仕分リスト発行 ・仕分・欠品リスト発行 ・積付表発行 ・作業報告書発行 ・タカハタDAS対象外仕分リスト発行

--- a/src/TakahataDistListPrint/Views/SelectDeliveryDateDlg.xaml
+++ b/src/TakahataDistListPrint/Views/SelectDeliveryDateDlg.xaml
@@ -13,7 +13,8 @@
 
         <StackPanel Orientation="Horizontal">
             <TextBlock Text="納品日：" VerticalAlignment="Center"/>
-            <DatePicker x:Name="Date" SelectedDate="{Binding Date}" Language="ja" Width="200" />
+            <DatePicker x:Name="Date" SelectedDate="{Binding Date}" Language="ja" Width="200"
+                        DateValidationError="Date_DateValidationError"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20,0,0">
