#0007269 店番表示処理　『箱数点灯』ボタンを押下するとエラー修正

--- a/src/DispShop/Views/MainDispShop.xaml
+++ b/src/DispShop/Views/MainDispShop.xaml
@@ -101,7 +101,8 @@
         <controls:GridColumnSetting TargetGrid="{Binding ElementName=dataGrid}" SettingsKey="DispShopColumns"/>
         <DataGrid x:Name="dataGrid" ItemsSource="{Binding DistItems}" AutoGenerateColumns="False"
                   IsReadOnly="True" VerticalScrollBarVisibility="Auto" IsSynchronizedWithCurrentItem="True"
-                  SelectionUnit="FullRow" FrozenColumnCount="0">
+                  SelectionUnit="FullRow" FrozenColumnCount="0"
+                  AlternatingRowBackground="{StaticResource AlternateDisplayGridBrush}">
 
             <DataGrid.Columns>
                 <DataGridTextColumn Header="表示器No" Binding="{Binding TdUnitAddrCode}"/>
