--- a/src/Mapping/Views/LocInfo.xaml
+++ b/src/Mapping/Views/LocInfo.xaml
@@ -66,7 +66,7 @@
             </StackPanel>
         </Grid>
 
-        <controls:GridColumnSetting TargetGrid="{Binding ElementName=gridlocinfo}" SettingsKey="MappingColumns"/>
+        <controls:GridColumnSetting TargetGrid="{Binding ElementName=gridlocinfo}" SettingsKey="MappingLocInfoColumns"/>
         <DataGrid Margin="3" DockPanel.Dock="Left" 
                       Name="gridlocinfo" ItemsSource="{Binding LocInfos, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"                          
                   IsReadOnly="True" VerticalScrollBarVisibility="Auto" IsSynchronizedWithCurrentItem="True"
