--- a/src/DistGroup/Views/InputDistGroupDlg.xaml
+++ b/src/DistGroup/Views/InputDistGroupDlg.xaml
@@ -1,11 +1,13 @@
 ﻿<UserControl x:Class="DistGroup.Views.InputDistGroupDlg"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:prism="http://prismlibrary.com/"
-             prism:ViewModelLocator.AutoWireViewModel="True"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:b="clr-namespace:WindowLib.Behaviors;assembly=WindowLib"
              xmlns:utils="clr-namespace:WindowLib.Utils;assembly=WindowLib"
              xmlns:controls="clr-namespace:WindowLib.Views;assembly=WindowLib"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             prism:ViewModelLocator.AutoWireViewModel="True"
              Loaded="UserControl_Loaded">
 
     <prism:Dialog.WindowStyle>
@@ -238,6 +240,16 @@
                                 <Setter Property="HorizontalContentAlignment" Value="Center"/>
                             </Style>
                         </DataGrid.ColumnHeaderStyle>
+
+                        <i:Interaction.Behaviors>
+                            <b:DataGridFocusBehavior Column="{Binding GridFocusColumnIndex,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" Row="{Binding GridFocusRowIndex,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" />
+                        </i:Interaction.Behaviors>
+
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="RowEditEnding">
+                                <i:InvokeCommandAction Command="{Binding EndCodeEdit}" CommandParameter="Batch" />
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
 
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="出荷バッチ" Binding="{Binding CdShukkaBatch, UpdateSourceTrigger=PropertyChanged, Delay=300}" Width="1.5*"
