--- a/src/Mapping/Views/DeliveryDateDialog.xaml
+++ b/src/Mapping/Views/DeliveryDateDialog.xaml
@@ -33,7 +33,8 @@
 
         <StackPanel Orientation="Horizontal">
             <TextBlock Text="納品日：" VerticalAlignment="Center"/>
-            <DatePicker x:Name="Date" SelectedDate="{Binding Date}" Language="ja" Width="200" />
+            <DatePicker x:Name="Date" SelectedDate="{Binding Date}" Width="200" PreviewKeyDown="DatePicker_PreviewKeyDown" Language="ja"
+                            DateValidationError="DatePicker_DateValidationError"/>
         </StackPanel>
         
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20,0,0">
