対象メンテナンス画面:ID=7236,7235 日付入力後に確定しないまま「登録」した場合の対策追加
・登録クリック時、フォーカス移動実施で入力を確定させる

--- a/src/Customer/Views/InputCustomer.xaml
+++ b/src/Customer/Views/InputCustomer.xaml
@@ -50,7 +50,7 @@
                     </StackPanel>
                 </Button>
 
-                <Button Command="{Binding Register}">
+                <Button Command="{Binding Register}" Click="Regist_Click">
                     <StackPanel Orientation="Vertical">
                         <materialDesign:PackIcon Kind="Edit"/>
                         <TextBlock Text="登録"/>
