--- a/src/DistBlock/Views/InputDistBlockDlg.xaml
+++ b/src/DistBlock/Views/InputDistBlockDlg.xaml
@@ -50,7 +50,7 @@
                     </StackPanel>
                 </Button>
 
-                <Button Command="{Binding Register}">
+                <Button Command="{Binding Register}" Click="Regist_Click">
                     <StackPanel Orientation="Vertical">
                         <materialDesign:PackIcon Kind="Edit"/>
                         <TextBlock Text="登録"/>
